--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,6 +14,13 @@
       "contacts": "Контакты"
     }
   },
+  "offlineSEOAnalyse": {
+    "title": "Офлайн SEO",
+    "description": "Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа новых предложений.",
+    "email-placeholder": "Электронная почта",
+    "website-placeholder": "URL веб-сайта",
+    "button-text": "Анализировать"
+  },
   "newsletter": {
     "title": "Подпишитесь на новостную рассылку",
     "description": "Получите 50% скидку на первый проект",
