--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -23,9 +23,10 @@
   },
   "LatestPosts": {
     "title": "Последние посты",
-    "data1": "15 Дек 2020 • 8 мин чтения",
-    "data2": "4 Июля 2021 • 8 мин чтения",
-    "data3": "19 Апр 2019 • 8 мин чтения"
+    "Dec": "Дек",
+    "Jul": "Июля",
+    "Apr": "Апр",
+    "read-mins": "мин чтения"
   },
   "getFreeSEOAnalysis": {
     "title-part1": "Получите бесплатный",
