--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,15 +11,20 @@
       "case-studies": "Тем. исследования",
       "blog": "Блог",
       "about-us": "О нас",
-      "contacts": "Контакты"
+      "contact": "Контакты"
     }
   },
   "offlineSEOAnalyse": {
-    "title": "Офлайн SEO",
+    "title": "Оффлайн SEO",
     "description": "Повседневная практика показывает, что постоянное информационно-пропагандистское обеспечение нашей деятельности требуют от нас анализа новых предложений.",
     "email-placeholder": "Электронная почта",
     "website-placeholder": "URL веб-сайта",
     "button-text": "Анализировать"
+  },
+  "Testimonials": {
+    "title1": "Отзывы",
+    "title2": "Кто Любит Нашу Работу",
+    "designer": "Дизайнер"
   },
   "LatestPosts": {
     "title": "Последние посты",
