--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -56,5 +56,64 @@
     "copyright": "© 2021. Все права защищены",
     "help-center": "Справочный центр",
     "terms-of-service": "Условия обслуживания"
+  },
+  "ServicesPage": {
+    "main-1": {
+      "title": "Оффлайн SEO",
+      "description": "И нет сомнений, что предприниматели в сети интернет, вне зависимости от их уровня, должны быть преданы социально-демократической анафеме.",
+      "advantage-1": "Полёты первым классом",
+      "advantage-2": "5-звездочное размещение",
+      "advantage-3": "Инклюзивные пакеты",
+      "advantage-4": "Последние модели автомобилей",
+      "button": "Проверить нашу работу"
+    }, 
+    "main-2": {
+      "title": "Услуги включают",
+      "description": "Повседневная практика показывает, что повышение уровня гражданского сознания, в своём классическом представлении, допускает внедрение укрепления моральных ценностей.",
+      "card-1": "Поисковая оптимизация",
+      "card-2": "Стратегия в социальных сетях",
+      "card-3": "Реальное время и данные",
+      "card-4": "Управление онлайн-медиа",
+      "card-5": "Отчет и анализ",
+      "card-6": "Восстановление штрафов",
+      "card-description": "Внезапно, ключевые особенности структуры проекта функционально разнесены на независимые элементы."
+    }, 
+    "main-3": {
+      "title": "Достигнутая выгода",
+      "description": "Повседневная практика показывает, что повышение уровня гражданского сознания, в своём классическом представлении, допускает внедрение укрепления моральных ценностей.",
+      "card-1": {
+        "title": "Поисковая оптимизация",
+        "description": "Внезапно, ключевые особенности структуры"
+      },
+      "card-2": {
+        "title": "Стратегия в социальных сетях",
+        "description": "Кстати, сторонники тоталитаризма в науке могут быть обнародованы."
+      },
+      "card-3": {
+        "title": "Реальное время и данные",
+        "description": "Внезапно, ключевые особенности структуры"
+      },
+      "card-4": {
+        "title": "Управление онлайн-медиа",
+        "description": "Кстати, сторонники тоталитаризма в науке могут быть обнародованы."
+      },
+      "card-5": {
+        "title": "Отчет и анализ",
+        "description": "Внезапно, ключевые особенности структуры"
+      },
+      "card-6": {
+        "title": "Восстановление штрафов",
+        "description": "Кстати, сторонники тоталитаризма в науке могут быть обнародованы."
+      }
+    },
+    "main-4": {
+      "title": "Как это работает",
+      "description": "Кстати, сторонники тоталитаризма в науке могут быть обнародованы.",
+      "card-1": "Планирование",
+      "card-2": "Изучение",
+      "card-3": "Оптимизация",
+      "card-4": "Результаты",
+      "card-description": "Внезапно, ключевые особенности структуры проекта функционально разнесены на независимые элементы."
+    }
   }
 }
