--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -115,5 +115,19 @@
       "card-4": "Результаты",
       "card-description": "Внезапно, ключевые особенности структуры проекта функционально разнесены на независимые элементы."
     }
+  },
+  "CaseStudies": {
+    "list": {
+      "title": "Наши тематические исследования",
+      "description": "Внезапно, ключевые особенности структуры проекта функционально разнесены на независимые элементы.",
+      "swiper-nav": {
+        "all": "Все",
+        "branding": "Брендинг",
+        "digital": "Цифровой",
+        "marketing": "Маркетинг",
+        "seo": "Поисковая оптимизация",
+        "development": "Разработка"
+      }
+    }
   }
 }
