feat: CaseStudiesDetailsPage.jsx and redux state

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -128,6 +128,15 @@
         "seo": "Поисковая оптимизация",
         "development": "Разработка"
       }
+    },
+    "details": {
+      "aside": {
+        "summary": "Сводка",
+        "website": "Веб-сайт",
+        "category": "Категория",
+        "date": "Дата",
+        "share": "Поделиться"
+      }
     }
   }
 }
