--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -128,6 +128,14 @@
         "seo": "SEO",
         "development": "Development"
       }
+    },
+    "details": {
+      "aside": {
+        "summary": "Summary",
+        "website": "Website",
+        "category": "Category",
+        "date": "Date"
+      }
     }
   }
 }
