--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -134,7 +134,8 @@
         "summary": "Summary",
         "website": "Website",
         "category": "Category",
-        "date": "Date"
+        "date": "Date",
+        "share": "Share"
       }
     }
   }
