feat: small translate change

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,7 @@
       "case-studies": "Case Studies",
       "blog": "Blog",
       "about-us": "About Us",
-      "contact": "Contacts"
+      "contact": "Contact"
     }
   },
   "offlineSEOAnalyse": {
