--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -11,7 +11,7 @@
       "case-studies": "Тем. исследования",
       "blog": "Блог",
       "about-us": "О нас",
-      "contact": "Контакты"
+      "contact": "Связаться"
     }
   },
   "offlineSEOAnalyse": {
